[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vllmtop"
version = "0.1.0"
description = "A btop-style terminal UI for monitoring a vLLM instance and its GPU in real time."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "nvidia-ml-py>=12.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
vllmtop = "vllmtop.cli:main"

[tool.setuptools.packages.find]
include = ["vllmtop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
